--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Ilya Aizenberg</title>
   </head>
-  <body>
+  <body style="min-height: 100vh" class="mx-auto max-w-7xl">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
