--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ilya Aizenberg</title>
+    <script src="https://kit.fontawesome.com/6d91ab9cfa.js" crossorigin="anonymous"></script>
   </head>
   <body style="min-height: 100vh" class="mx-auto max-w-7xl">
     <div id="app"></div>
