--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html data-theme="light" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ilya Aizenberg</title>
-    <script src="https://kit.fontawesome.com/6d91ab9cfa.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/6d91ab9cfa.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body style="min-height: 100vh" class="mx-auto max-w-7xl">
+  <body style="min-height: 100vh" class="mx-auto">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
